# wasm-demo-web

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
webdata/: index.html
