[package]
name = "wasm-demo-web"
version = "0.1.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'MouseEvent',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'HtmlElement',
  'Node',
  'Window',
]
