[package]
name = "server"
version = "0.1.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
