[package]
name = "server"
version = "0.1.0"
authors = ["Rüdiger Sonderfeld <ruediger@c-plusplus.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
pretty_env_logger = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
